added paragraph tag

--- a/index.html
+++ b/index.html
@@ -2,3 +2,13 @@
   <h1>welcome</h1>
 </center>
 <hr>
+<p>
+  The Wikipedia entry for "Welcome" describes it as a term that indicates a hospitable greeting or the act of making someone feel at home. It can refer to various manifestations, from a formal sign to a community tradition. The word itself has Germanic roots and is recorded in Old English. 
+Here's a more detailed breakdown:
+Definition:
+"Welcome" means to greet hospitably and with courtesy or cordiality. It can also mean to accept with pleasure the occurrence or presence of something. 
+Manifestations:
+Formal Welcome Signs: These are road signs at the border of a region, or for a specific community or building, introducing or welcoming visitors. 
+Welcome Mats: Doormats used to welcome visitors to a house or building. 
+Welcome Wagons: Community traditions where residents collect useful gifts for new residents moving to the area. 
+</p>
