added paragraph tag

--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
   <h1>welcome</h1>
 </center>
 <hr>
+<p>
+  The Wikipedia entry on "Welcome" explores the concept of making someone feel comfortable and at home. It discusses the word's etymology, its use in various contexts, and how it's expressed through actions like welcome signs, mats, and community traditions. Wikipedia also uses "welcome" to greet new users and guide them on how to contribute to the encyclopedia. 
+Here's a more detailed breakdown:
+1. Meaning and Etymology:
+"Welcome" signifies creating a feeling of belonging and comfort. 
+The word has roots in Old English, indicating a "wished-for guest". 
+It can be used as a noun, adjective, or interjection, indicating both the act of greeting and the feeling it evokes. 
+</p>
+<p>contact:877654322</p>
